deploy: 5d0013090cfa21b1eeb39bff0840b4fdc222c0fb

--- a/genindex.html
+++ b/genindex.html
@@ -13,7 +13,9 @@
         <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js"></script>
         <script src="_static/jquery.js"></script>
         <script src="_static/underscore.js"></script>
+        <script src="_static/_sphinx_javascript_frameworks_compat.js"></script>
         <script src="_static/doctools.js"></script>
+        <script src="_static/sphinx_highlight.js"></script>
         <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
     <script src="_static/js/theme.js"></script>
     <link rel="index" title="Index" href="#" />
@@ -25,14 +27,18 @@
     <nav data-toggle="wy-nav-shift" class="wy-nav-side">
       <div class="wy-side-scroll">
         <div class="wy-side-nav-search" >
-            <a href="index.html" class="icon icon-home"> qoqo_aqt
+
+          
+          
+          <a href="index.html" class="icon icon-home">
+            qoqo_aqt
           </a>
               <div class="version">
                 0.0
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
-    <input type="text" name="q" placeholder="Search docs" />
+    <input type="text" name="q" placeholder="Search docs" aria-label="Search docs" />
     <input type="hidden" name="check_keywords" value="yes" />
     <input type="hidden" name="area" value="default" />
   </form>
@@ -56,8 +62,8 @@
         <div class="rst-content">
           <div role="navigation" aria-label="Page navigation">
   <ul class="wy-breadcrumbs">
-      <li><a href="index.html" class="icon icon-home"></a> &raquo;</li>
-      <li>Index</li>
+      <li><a href="index.html" class="icon icon-home" aria-label="Home"></a></li>
+      <li class="breadcrumb-item active">Index</li>
       <li class="wy-breadcrumbs-aside">
       </li>
   </ul>
@@ -85,13 +91,7 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/generated/qoqo_aqt.Backend.html#qoqo_aqt.Backend.__init__">__init__() (qoqo_aqt.Backend method)</a>
-
-      <ul>
-        <li><a href="generated/generated/generated/qoqo_aqt.devices.NoisySimulatorDevice.html#qoqo_aqt.devices.NoisySimulatorDevice.__init__">(qoqo_aqt.devices.NoisySimulatorDevice method)</a>
 </li>
-        <li><a href="generated/generated/generated/qoqo_aqt.devices.SimulatorDevice.html#qoqo_aqt.devices.SimulatorDevice.__init__">(qoqo_aqt.devices.SimulatorDevice method)</a>
-</li>
-      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -106,22 +106,22 @@
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/generated/qoqo_aqt.Backend.html#qoqo_aqt.Backend.from_bincode">from_bincode() (qoqo_aqt.Backend method)</a>, <a href="generated/qoqo_aqt.html#qoqo_aqt.Backend.from_bincode">[1]</a>
+      <li><a href="generated/generated/qoqo_aqt.Backend.html#qoqo_aqt.Backend.from_bincode">from_bincode() (qoqo_aqt.Backend static method)</a>, <a href="generated/qoqo_aqt.html#qoqo_aqt.Backend.from_bincode">[1]</a>
 
       <ul>
-        <li><a href="generated/generated/generated/qoqo_aqt.devices.NoisySimulatorDevice.html#qoqo_aqt.devices.NoisySimulatorDevice.from_bincode">(qoqo_aqt.devices.NoisySimulatorDevice method)</a>, <a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.NoisySimulatorDevice.from_bincode">[1]</a>
+        <li><a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.NoisySimulatorDevice.from_bincode">(qoqo_aqt.devices.NoisySimulatorDevice static method)</a>
 </li>
-        <li><a href="generated/generated/generated/qoqo_aqt.devices.SimulatorDevice.html#qoqo_aqt.devices.SimulatorDevice.from_bincode">(qoqo_aqt.devices.SimulatorDevice method)</a>, <a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.SimulatorDevice.from_bincode">[1]</a>
+        <li><a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.SimulatorDevice.from_bincode">(qoqo_aqt.devices.SimulatorDevice static method)</a>
 </li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/generated/qoqo_aqt.Backend.html#qoqo_aqt.Backend.from_json">from_json() (qoqo_aqt.Backend method)</a>, <a href="generated/qoqo_aqt.html#qoqo_aqt.Backend.from_json">[1]</a>
+      <li><a href="generated/generated/qoqo_aqt.Backend.html#qoqo_aqt.Backend.from_json">from_json() (qoqo_aqt.Backend static method)</a>, <a href="generated/qoqo_aqt.html#qoqo_aqt.Backend.from_json">[1]</a>
 
       <ul>
-        <li><a href="generated/generated/generated/qoqo_aqt.devices.NoisySimulatorDevice.html#qoqo_aqt.devices.NoisySimulatorDevice.from_json">(qoqo_aqt.devices.NoisySimulatorDevice method)</a>, <a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.NoisySimulatorDevice.from_json">[1]</a>
+        <li><a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.NoisySimulatorDevice.from_json">(qoqo_aqt.devices.NoisySimulatorDevice static method)</a>
 </li>
-        <li><a href="generated/generated/generated/qoqo_aqt.devices.SimulatorDevice.html#qoqo_aqt.devices.SimulatorDevice.from_json">(qoqo_aqt.devices.SimulatorDevice method)</a>, <a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.SimulatorDevice.from_json">[1]</a>
+        <li><a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.SimulatorDevice.from_json">(qoqo_aqt.devices.SimulatorDevice static method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -145,14 +145,14 @@
 <h2 id="N">N</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/generated/generated/qoqo_aqt.devices.NoisySimulatorDevice.html#qoqo_aqt.devices.NoisySimulatorDevice">NoisySimulatorDevice (class in qoqo_aqt.devices)</a>, <a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.NoisySimulatorDevice">[1]</a>
+      <li><a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.NoisySimulatorDevice">NoisySimulatorDevice (class in qoqo_aqt.devices)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/generated/generated/qoqo_aqt.devices.NoisySimulatorDevice.html#qoqo_aqt.devices.NoisySimulatorDevice.number_qubits">number_qubits() (qoqo_aqt.devices.NoisySimulatorDevice method)</a>, <a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.NoisySimulatorDevice.number_qubits">[1]</a>
+      <li><a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.NoisySimulatorDevice.number_qubits">number_qubits() (qoqo_aqt.devices.NoisySimulatorDevice method)</a>
 
       <ul>
-        <li><a href="generated/generated/generated/qoqo_aqt.devices.SimulatorDevice.html#qoqo_aqt.devices.SimulatorDevice.number_qubits">(qoqo_aqt.devices.SimulatorDevice method)</a>, <a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.SimulatorDevice.number_qubits">[1]</a>
+        <li><a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.SimulatorDevice.number_qubits">(qoqo_aqt.devices.SimulatorDevice method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -183,15 +183,17 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/generated/generated/qoqo_aqt.devices.NoisySimulatorDevice.html#qoqo_aqt.devices.NoisySimulatorDevice.remote_host">remote_host() (qoqo_aqt.devices.NoisySimulatorDevice method)</a>, <a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.NoisySimulatorDevice.remote_host">[1]</a>
+      <li><a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.NoisySimulatorDevice.remote_host">remote_host() (qoqo_aqt.devices.NoisySimulatorDevice method)</a>
 
       <ul>
-        <li><a href="generated/generated/generated/qoqo_aqt.devices.SimulatorDevice.html#qoqo_aqt.devices.SimulatorDevice.remote_host">(qoqo_aqt.devices.SimulatorDevice method)</a>, <a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.SimulatorDevice.remote_host">[1]</a>
+        <li><a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.SimulatorDevice.remote_host">(qoqo_aqt.devices.SimulatorDevice method)</a>
 </li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/generated/qoqo_aqt.Backend.html#qoqo_aqt.Backend.run_circuit">run_circuit() (qoqo_aqt.Backend method)</a>, <a href="generated/qoqo_aqt.html#qoqo_aqt.Backend.run_circuit">[1]</a>
+</li>
+      <li><a href="generated/generated/qoqo_aqt.Backend.html#qoqo_aqt.Backend.run_measurement">run_measurement() (qoqo_aqt.Backend method)</a>, <a href="generated/qoqo_aqt.html#qoqo_aqt.Backend.run_measurement">[1]</a>
 </li>
       <li><a href="generated/generated/qoqo_aqt.Backend.html#qoqo_aqt.Backend.run_measurement_registers">run_measurement_registers() (qoqo_aqt.Backend method)</a>, <a href="generated/qoqo_aqt.html#qoqo_aqt.Backend.run_measurement_registers">[1]</a>
 </li>
@@ -201,7 +203,7 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/generated/generated/qoqo_aqt.devices.SimulatorDevice.html#qoqo_aqt.devices.SimulatorDevice">SimulatorDevice (class in qoqo_aqt.devices)</a>, <a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.SimulatorDevice">[1]</a>
+      <li><a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.SimulatorDevice">SimulatorDevice (class in qoqo_aqt.devices)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -214,9 +216,9 @@
       <li><a href="generated/generated/qoqo_aqt.Backend.html#qoqo_aqt.Backend.to_bincode">to_bincode() (qoqo_aqt.Backend method)</a>, <a href="generated/qoqo_aqt.html#qoqo_aqt.Backend.to_bincode">[1]</a>
 
       <ul>
-        <li><a href="generated/generated/generated/qoqo_aqt.devices.NoisySimulatorDevice.html#qoqo_aqt.devices.NoisySimulatorDevice.to_bincode">(qoqo_aqt.devices.NoisySimulatorDevice method)</a>, <a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.NoisySimulatorDevice.to_bincode">[1]</a>
+        <li><a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.NoisySimulatorDevice.to_bincode">(qoqo_aqt.devices.NoisySimulatorDevice method)</a>
 </li>
-        <li><a href="generated/generated/generated/qoqo_aqt.devices.SimulatorDevice.html#qoqo_aqt.devices.SimulatorDevice.to_bincode">(qoqo_aqt.devices.SimulatorDevice method)</a>, <a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.SimulatorDevice.to_bincode">[1]</a>
+        <li><a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.SimulatorDevice.to_bincode">(qoqo_aqt.devices.SimulatorDevice method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -224,9 +226,9 @@
       <li><a href="generated/generated/qoqo_aqt.Backend.html#qoqo_aqt.Backend.to_json">to_json() (qoqo_aqt.Backend method)</a>, <a href="generated/qoqo_aqt.html#qoqo_aqt.Backend.to_json">[1]</a>
 
       <ul>
-        <li><a href="generated/generated/generated/qoqo_aqt.devices.NoisySimulatorDevice.html#qoqo_aqt.devices.NoisySimulatorDevice.to_json">(qoqo_aqt.devices.NoisySimulatorDevice method)</a>, <a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.NoisySimulatorDevice.to_json">[1]</a>
+        <li><a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.NoisySimulatorDevice.to_json">(qoqo_aqt.devices.NoisySimulatorDevice method)</a>
 </li>
-        <li><a href="generated/generated/generated/qoqo_aqt.devices.SimulatorDevice.html#qoqo_aqt.devices.SimulatorDevice.to_json">(qoqo_aqt.devices.SimulatorDevice method)</a>, <a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.SimulatorDevice.to_json">[1]</a>
+        <li><a href="generated/generated/qoqo_aqt.devices.html#qoqo_aqt.devices.SimulatorDevice.to_json">(qoqo_aqt.devices.SimulatorDevice method)</a>
 </li>
       </ul></li>
   </ul></td>
